# silent

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Cargo.toml  LICENSE  cliff.toml  deny.toml  readme.md  run_clippy.sh
.github/: dependabot.yml
.github/workflows/: build.yml  publish.yaml  release.yaml
benchmark/: Cargo.toml  README.md
benchmark/benches/: route_benchmark.rs
benchmark/results/: route_tree_dfs.md
examples/candle_whisper/: Cargo.toml  readme.md
examples/candle_whisper/src/: args.rs  decoder.rs  device.rs  handlers.rs  main.rs  model.rs  multilingual.rs  pcm_decode.rs  types.rs
examples/configs/: Cargo.toml
examples/cookies/: Cargo.toml
examples/cors/: Cargo.toml
examples/custom_handler/: Cargo.toml
examples/custom_response/: Cargo.toml
examples/custom_tokio_listener/: Cargo.toml
examples/custom_tokio_listener/src/: main.rs
examples/custom_tokio_runtime/: Cargo.toml
examples/custom_tokio_runtime/src/: main.rs
examples/custom_tokio_unix_listener/: Cargo.toml
examples/custom_tokio_unix_listener/src/: main.rs
examples/exception_handler/: Cargo.toml
examples/grpc/: Cargo.toml  README.md  build.rs
examples/grpc/src/: client.rs  main.rs
examples/grpc_h2c/: Cargo.toml  README.md  build.rs
examples/grpc_h2c/proto/: hello_world.proto
examples/grpc_h2c/src/: client.rs  main.rs
examples/grpc_streaming/: Cargo.toml  build.rs
examples/grpc_streaming/src/: client.rs  main.rs
examples/llma_chat/: Cargo.toml
examples/llma_chat/src/: llm_middleware.rs  main.rs  message_event_middleware.rs
examples/middleware_wasi/: Cargo.toml
examples/middleware_wasi/src/: lib.rs
examples/multer_test/: Cargo.toml
examples/multer_test/src/: main.rs
examples/openapi/: Cargo.toml
examples/openapi/src/: main.rs
examples/plugin_test/: Cargo.toml  README.MD  libexamples_plugins.dylib
examples/plugin_test/src/: main.rs
examples/silent-db-macros/: Cargo.toml
examples/silent-db-macros/src/: main.rs
examples/silent_db/: Cargo.toml
examples/silent_db/src/: main.rs  test_table.rs
examples/sse-chat/: Cargo.toml
examples/sse-chat/src/: main.rs
examples/templates/: Cargo.toml
examples/templates/src/: main.rs
examples/templates/templates/: index.html
examples/tls/: Cargo.toml  readme.md
examples/tls/src/: main.rs
examples/todo/: Cargo.toml
examples/todo/src/: main.rs
examples/tokenizer_test/: Cargo.toml
examples/tokenizer_test/src/: main.rs
examples/tokio-tungstenite_test/: Cargo.toml
examples/wasm/: Cargo.toml
examples/wasm/.cargo/: config.toml
examples/wasm/src/: lib.rs  main.rs
examples/wasm_test/: Cargo.toml
examples/wasm_test/src/: main.rs
silent/: Cargo.toml
silent-cli/: Cargo.toml
silent-cli/src/: main.rs
silent-db/: Cargo.toml
silent-db-macros/: Cargo.toml
silent-db-macros/src/: lib.rs  utils.rs
silent-db-macros/src/macros/: mod.rs  mysql.rs
silent-db/src/: lib.rs  utils.rs
silent-db/src/core/: dsl.rs  fields.rs  indices.rs  migrate.rs  mod.rs  query.rs  tables.rs
silent-db/src/types/: mod.rs
silent-db/src/types/mysql/: indices.rs  mod.rs
silent-db/src/types/mysql/base/: macros.rs  mod.rs  tables.rs
silent-db/src/types/mysql/fields/: json.rs  mod.rs
silent-db/src/types/mysql/fields/blobs/: blob.rs  longblob.rs  mediumblob.rs  mod.rs  tinyblob.rs
silent-db/src/types/mysql/fields/date_time/: datetime.rs  mod.rs  timestamp.rs  year.rs
silent-db/src/types/mysql/fields/number/: bigint.rs  decimal.rs  double.rs  float.rs  mediumint.rs  tinyint.rs
silent-db/src/types/mysql/fields/string/: char.rs  longtext.rs  mod.rs  text.rs  varchar.rs
silent/src/: lib.rs  prelude.rs
silent/src/configs/: mod.rs
silent/src/conn/: mod.rs
silent/src/conn/support/: mod.rs  tokiort.rs
silent/src/cookie/: cookie_ext.rs  middleware.rs  mod.rs
silent/src/core/: adapt.rs  configs.rs  connection.rs  cookie.rs  form.rs  listener.rs  mod.rs  next.rs  path_param.rs  req_body.rs  request.rs  res_body.rs  response.rs  serde.rs  socket_addr.rs  stream.rs
silent/src/error/: exception_handler_trait.rs  exception_handler_wrapper.rs  mod.rs
silent/src/grpc/: handler.rs  mod.rs  register.rs  service.rs  stream.rs  utils.rs
silent/src/handler/: handler_trait.rs  handler_wrapper.rs  handler_wrapper_html.rs  handler_wrapper_response.rs  handler_wrapper_static.rs  mod.rs
silent/src/log/: mod.rs
silent/src/middleware/: middleware_trait.rs  mod.rs  readme.md
silent/src/middleware/middlewares/: cors.rs  exception_handler.rs  mod.rs  request_time_logger.rs  timeout.rs
silent/src/route/: handler_append.rs  handler_match.rs  mod.rs  path_param.rs  readme.md  root.rs  route_service.rs  route_tree.rs
silent/src/rt/: mod.rs
silent/src/scheduler/: middleware.rs  mod.rs  process_time.rs  task.rs  traits.rs
silent/src/scheduler/storage/: mod.rs  traits.rs
silent/src/security/: aes.rs  argon2.rs  hash.rs  mod.rs  pbkdf2.rs  readme.md  rsa.rs
silent/src/service/: hyper_service.rs  mod.rs  serve.rs
silent/src/session/: middleware.rs  mod.rs  readme.md  session_ext.rs
silent/src/sse/: event.rs  keep_alive.rs  mod.rs  reply.rs
silent/src/static/: readme.md
silent/src/tamplate/: readme.md
silent/src/templates/: middleware.rs  mod.rs
silent/src/ws/: handler.rs  handler_wrapper_websocket.rs  message.rs  mod.rs  route.rs  types.rs  upgrade.rs  websocket.rs  websocket_handler.rs  websocket_handler_trait.rs
silent/tests/: integration.rs
silent_db/: Cargo.toml
silent_db/src/: fields.rs  lib.rs
silent_db/src/core/: dsl.rs  fields.rs  migrate.rs  mod.rs  query.rs  tables.rs
silent_db/src/types/: mod.rs
silent_db/src/types/mysql/base/: mod.rs  tables.rs
silent_db/src/types/mysql/fields/: mod.rs
silent_db/src/types/mysql/fields/date_time/: date.rs  mod.rs  time.rs
silent_db/src/types/mysql/fields/number/: int.rs  mod.rs  smallint.rs  tinyint.rs
silent_db/src/types/mysql/fields/string/: mediumtext.rs  mod.rs  tinytext.rs
silent_macros/: Cargo.toml
silent_macros/src/: lib.rs
silent_py/: Cargo.toml  requirements.txt  test.py
silent_py/src/: lib.rs
(+43 files in other folders)
