[workspace]
members = ["silent", "examples/*", "benchmark"]
default-members = ["silent"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/hubertshelley/silent"
license = "Apache-2.0"
readme = "./readme.md"
repository = "https://github.com/hubertshelley/silent"
version = "2.4.0"

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1.44.2", features = ["full"] }
tonic = "0.13.0"
prost = "0.13"
http = "1.3.1"
hyper-util = "0.1.11"
hyper = "1.6.0"
tower = "0.5.2"
tonic-build = "0.13.0"
tokio_wasi = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
futures-util = "0.3.31"
once_cell = "1.21.3"
tokio-tungstenite = "0.26.2"
tracing-subscriber = "0.3"
headers = "0.4.0"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
parking_lot = "0.12"
chrono = "0.4"
dlopen2 = { version = "0.7.0", features = ["derive"] }
h2 = "0.4.9"
