[workspace]
members = ["silent", "examples/*", "benchmark"]
default-members = ["silent"]
resolver = "3"

[workspace.package]
edition = "2024"
authors = ["Hubert Shelley <hubertshelley@163.com>"]
homepage = "https://github.com/silent-rs/silent"
license = "Apache-2.0"
readme = "./readme.md"
repository = "https://github.com/silent-rs/silent"
version = "2.5.2"

[workspace.dependencies]
async-trait = "0.1.88"
tokio = { version = "1", features = ["full"] }
tonic = "0.14"
prost = "0.14"
http = "1"
hyper-util = "0.1"
hyper = "1"
tower = "0.5"
tonic-build = "0.13"
tokio_wasi = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
futures-util = "0.3"
once_cell = "1"
tokio-tungstenite = "0.27"
tracing-subscriber = "0.3"
headers = "0.4"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
parking_lot = "0.12"
chrono = "0.4"
dlopen2 = { version = "0.8", features = ["derive"] }
h2 = "0.4"
