[workspace]
default-members = ["silent"]
members = ["silent", "benchmark", "examples/*"]
resolver = "2"

[workspace.package]
authors = ["Hubert Shelley <hubertshelley@163.com>"]
edition = "2024"
homepage = "https://github.com/silent-rs/silent"
license = "Apache-2.0"
readme = "./readme.md"
repository = "https://github.com/silent-rs/silent"
version = "2.7.0"

[workspace.dependencies]
async-trait = "0.1.88"
chrono = "0.4"
dlopen2 = {version = "0.8", features = ["derive"]}
futures-util = "0.3"
h2 = "0.4"
headers = "0.4"
http = "1"
hyper = "1"
hyper-util = "0.1"
once_cell = "1"
parking_lot = "0.12"
prost = "0.14"
serde = {version = "1", features = ["derive"]}
tokio = {version = "1", features = ["full"]}
tokio-stream = {version = "0.1", features = ["net"]}
tokio-tungstenite = "0.27"
tokio_wasi = {version = "1", features = ["full"]}
tonic = "0.14"
tonic-build = "0.14"
tower = "0.5"
tracing-subscriber = "0.3"
uuid = {version = "1", features = ["serde", "v4"]}
