[package]
name = "silent-db-macros"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.48", features = ["full"] }
log = "0.4.20"
proc-macro2 = "1.0.78"
