[package]
name = "silent-db-macros"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Macros for silent-db
"""
#version.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.51", features = ["full"] }
log = "0.4.20"
proc-macro2 = "1.0.78"
