[package]
name = "silent-db-macros"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Macros for silent-db
"""
#version.workspace = true
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.35"
syn = { version = "2.0.58", features = ["full"] }
log = "0.4.21"
proc-macro2 = "1.0.79"
darling = "0.20.8"
