[package]
name = "silent-db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
#version.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["sqlx/mysql", "silent-db-macros/mysql"]
postgres = ["sqlx/postgres", "silent-db-macros/postgres"]
sqlite = ["sqlx/sqlite", "silent-db-macros/sqlite"]

[dependencies]
anyhow = { version = "1.0.40" }
sqlparser = { version = "0.43.1", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "any"] }
serde_json = "1.0.113"
chrono = "0.4.33"
console = "0.15.8"
quote = "1.0.35"
syn = "2.0.48"
silent-db-macros = { path = "../silent-db-macros" }

[dev-dependencies]
serde = { version = "1.0.196", features = ["derive"] }
