[package]
name = "silent-db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
#version.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
anyhow = { version = "1.0.80" }
sqlparser = { version = "0.44.0", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "any"] }
serde_json = "1.0.114"
chrono = { version = "0.4.34", features = ["serde"] }
console = "0.15.8"
quote = "1.0.35"
syn = "2.0.51"
silent-db-macros = { path = "../silent-db-macros" }
regex = "1.10.3"

[dev-dependencies]
serde = { version = "1.0.197", features = ["derive"] }
