[package]
name = "silent-db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
description = """
Database support for silent
"""
#version.workspace = true
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
mysql = ["sqlx/mysql"]
postgres = ["sqlx/postgres"]
sqlite = ["sqlx/sqlite"]

[dependencies]
anyhow = { version = "1.0.82" }
sqlparser = { version = "0.45.0", features = ["serde"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "macros", "any"] }
serde_json = "1.0.116"
chrono = { version = "0.4.38", features = ["serde"] }
console = "0.15.8"
quote = "1.0.36"
syn = "2.0.60"
silent-db-macros = { path = "../silent-db-macros", version = "0.2.0" }
regex = "1.10.4"

[dev-dependencies]
serde = { version = "1.0.198", features = ["derive"] }
