[package]
name = "silent"
edition.workspace = true
authors.workspace = true
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]
documentation = "https://docs.rs/silent/"
description = """
Silent Web Framework
"""
homepage.workspace = true
keywords = ["web", "web-framework"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["server", "test", ]
full = ["admin", "server", "multipart", "upgrade", "sse", "security", "static", "session", "cookie", "template", "test", "scheduler", "grpc"]
admin = ["server", "sse", "template", "session"]
server = ["tokio/fs", "tokio/net", "tokio/rt-multi-thread", "tokio/signal"]
upgrade = ["dep:tokio-tungstenite"]
multipart = ["tokio/fs", "dep:multer", "dep:multimap", "dep:tempfile", "dep:textnonce"]
sse = ["dep:pin-project", "dep:tokio-stream"]
security = ["dep:argon2", "dep:pbkdf2", "dep:aes-gcm", "dep:aes", "dep:rsa"]
static = ["tokio/fs"]
session = ["cookie", "dep:async-session"]
cookie = ["dep:cookie"]
template = ["dep:tera"]
#wasi = ["tokio/sync"]
test = ["tokio/macros", "tokio/rt"]
scheduler = ["dep:cron"]
grpc = ["upgrade", "dep:tonic", "dep:pin-project-lite", "dep:pin-project", "dep:tokio-stream"]

[dependencies]
# Basic dependencies
thiserror = "2.0.9"
hyper = { version = "1.5.2", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["server-auto", "tokio"] }
tokio = { version = "1.42.0", optional = true }
bytes = "1.9.0"
http-body-util = "0.1.2"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
async-trait = "0.1.85"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
uuid = "1.11.0"
url = "2.5.4"
serde_html_form = "0.2.7"
mime = "0.3.17"
futures-util = "0.3.31"
chrono = { version = "0.4.39", default-features = false, features = ["clock"] }
tokio-tungstenite = { version = "0.26.1", optional = true }
headers = "0.4.0"
tokio-stream = { version = "0.1.17", features = ["net"], optional = true }
pin-project = { version = "1.1", optional = true }
pin-project-lite = { version = "0.2.16", optional = true }
http = "1.2.0"
http-body = "1.0.1"
futures = "0.3.31"
tokio-util = "0.7.13"
anyhow = "1.0.95"

# Scheduler
cron = { version = "0.15.0", optional = true }

# Multipart
multer = { version = "3.1.0", optional = true }
multimap = { version = "0.10.0", features = ["serde"], optional = true }
tempfile = { version = "3.15.0", optional = true }
textnonce = { version = "1.0.0", optional = true }


# Template
tera = { version = "1.20.0", optional = true }

# Session
async-session = { version = "3.0.0", optional = true }
cookie = { version = "0.18.1", features = ["secure", "percent-encode"], optional = true }

# Grpc
tonic = { version = "0.12.3", optional = true }

# Security
argon2 = { version = "0.5.3", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
aes-gcm = { version = "0.10.3", optional = true }
aes = { version = "0.8", optional = true }
rsa = { version = "0.9.7", optional = true }
mime_guess = "2.0.5"
