[package]
name = "silent"
edition.workspace = true
authors.workspace = true
categories = ["web-programming::http-server", "web-programming::websocket", "network-programming", "asynchronous"]
documentation = "https://docs.rs/silent/"
description = """
Silent Web Framework
"""
homepage.workspace = true
keywords = ["web", "web-framework"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = ["server", "test", ]
full = ["admin", "server", "multipart", "upgrade", "sse", "security", "static", "session", "cookie", "template", "test", "scheduler", "grpc", "tls"]
admin = ["server", "sse", "template", "session"]
server = ["tokio/fs", "tokio/net", "tokio/rt-multi-thread", "tokio/signal"]
upgrade = ["dep:tokio-tungstenite"]
multipart = ["tokio/fs", "dep:multer", "dep:multimap", "dep:tempfile", "dep:textnonce"]
sse = ["dep:pin-project", "dep:tokio-stream"]
security = ["dep:argon2", "dep:pbkdf2", "dep:aes-gcm", "dep:aes", "dep:rsa"]
static = ["tokio/fs", "dep:urlencoding"]
session = ["cookie", "dep:async-session"]
cookie = ["dep:cookie"]
template = ["dep:tera"]
#wasi = ["tokio/sync"]
test = ["tokio/macros", "tokio/rt"]
scheduler = ["dep:cron"]
grpc = ["upgrade", "dep:tonic", "dep:pin-project-lite", "dep:pin-project", "dep:tokio-stream"]
tls = ["dep:tokio-rustls"]

[dependencies]
# Basic dependencies
thiserror = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio"] }
tokio = { version = "1", optional = true }
bytes = "1"
http-body-util = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = "1.17"
url = "2"
serde_html_form = "0.2"
mime = "0.3"
futures-util = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio-tungstenite = { version = "0.26", optional = true }
headers = "0.4"
tokio-stream = { version = "0.1", features = ["net"], optional = true }
pin-project = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }
http = "1"
http-body = "1"
tokio-util = "0.7"
anyhow = "1"
urlencoding = { version = "2", optional = true }

# Scheduler
cron = { version = "0.15", optional = true }

# Multipart
multer = { version = "3", optional = true }
multimap = { version = "0.10", features = ["serde"], optional = true }
tempfile = { version = "3", optional = true }
textnonce = { version = "1", optional = true }


# Template
tera = { version = "1", optional = true }

# Session
async-session = { version = "3", optional = true }
cookie = { version = "0.18", features = ["secure", "percent-encode"], optional = true }

# Grpc
tonic = { version = "0.13", optional = true }

# Security
argon2 = { version = "0.5", optional = true }
pbkdf2 = { version = "0.12", features = ["simple"], optional = true }
aes-gcm = { version = "0.10", optional = true }
aes = { version = "0.8", optional = true }
rsa = { version = "0.9", optional = true }
mime_guess = "2"

# tls
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["logging", "tls12"] }
