[package]
name = "silent_db"
edition.workspace = true
authors.workspace = true
categories = ["web-programming::web", "web-programming::web-framework"]
documentation = "https://docs.rs/silent_db/"
description = """
Silent Web Framework Database ORM
"""
homepage.workspace = true
keywords = ["web", "web-framework"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent_macros = { path = "../silent_macros" }
serde = { version = "1.0.160", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
