[package]
name = "silent_macros"
edition.workspace = true
authors.workspace = true
categories = ["web-programming::web", "web-programming::web-framework"]
documentation = "https://docs.rs/silent_macros/"
description = """
Silent Web Framework Macros
"""
homepage.workspace = true
keywords = ["web", "web-framework"]
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0.26"
syn = "2.0.15"
