[package]
name = "candle_whisper"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]


[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.5", optional = true }


[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
silent = { path = "../../silent", features = ["full"] }
symphonia = { version = "0.5.4", features = ["all"] }
anyhow = "1.0.81"
tokio = { version = "1.37.0", features = ["full"] }

#candle-core = { version = "0.3.2" }
#candle-nn = { version = "0.3.2" }
#candle-transformers = { version = "0.3.2" }
# version = "0.3.2" is not working for metal
candle-core = { git = "https://github.com/huggingface/candle" }
candle-nn = { git = "https://github.com/huggingface/candle" }
candle-transformers = { git = "https://github.com/huggingface/candle" }

tokenizers = { version = "0.15.2", features = ["onig"] }
rand = "0.8.5"
serde_json = "1.0.115"
byteorder = "1.5.0"
