[package]
name = "example-custom_tokio_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent" }
async-trait.workspace = true
tokio = { workspace = true, features = ["full"] }
