[package]
name = "example-custom_tokio_runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent" }
async-trait = "0.1.82"
tokio = { version = "1.40.0", features = ["full"] }
