[package]
name = "example-custom_tokio_runtime"
version = "0.1.0"
edition.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent" }
async-trait.workspace = true
tokio.workspace = true
