[package]
name = "example-custom_tokio_unix_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent = { path = "../../silent" }
http-body-util = "0.1"
hyper = { workspace = true, features = ["full"] }
hyper-util = { workspace = true, features = ["tokio", "server-auto", "http1"] }
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
