[package]
name = "example-grpc"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12.1" }
prost = "0.13"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
silent = { path = "../../silent", features = ["grpc"] }
async-trait = "0.1.81"

[build-dependencies]
tonic-build = { version = "0.12.1" }
