[package]
name = "example-grpc"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
publish = false

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
tonic.workspace = true
prost.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
silent = { path = "../../silent", features = ["grpc"] }
async-trait.workspace = true

[build-dependencies]
tonic-build = { version = "0.13.0" }
