[package]
name = "example-grpc-h2c"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12.3" }
prost = "0.13"
tokio = { version = "1.42", features = ["macros", "rt-multi-thread"] }
silent = { path = "../../silent", features = ["grpc"] }
async-trait = "0.1.85"
http = "1.2.0"
hyper-util = "0.1.10"
hyper = "1.5.2"
tower = "0.5.2"

[build-dependencies]
tonic-build = { version = "0.12.3" }
