[package]
name = "example-grpc-streaming"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12.0" }
prost = "0.13"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
silent = { path = "../../silent", features = ["grpc"] }
async-trait = "0.1.81"
tokio-stream = "0.1.15"
h2 = "0.4.5"

[build-dependencies]
tonic-build = { version = "0.12.0" }
