[package]
name = "example-grpc-streaming"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "example-grpc-client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.12.2" }
prost = "0.13"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
silent = { path = "../../silent", features = ["grpc"] }
async-trait = "0.1.83"
tokio-stream = "0.1.16"
h2 = "0.4.6"

[build-dependencies]
tonic-build = { version = "0.12.2" }
