[package]
name = "llma_chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
llm = "0.1.1"
once_cell = "1.19.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
silent = { path = "../../silent", features = ["ws"] }
tokio = { version = "1.36.0", features = ["full"] }
