[package]
name = "example_middleware_wasi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ['cdylib']

[dependencies]
silent = { path = "../../silent", default-features = false, features = ["wasi"] }
async-trait = "0.1.68"
