[package]
name = "multer_test"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.5.0"
futures-util = "0.3.29"
multer = "2.1.0"
tokio = { version = "1.34.0", features = ["full"] }
