[package]
name = "examples_plugin_test"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
silent = { path = "../../silent" }
crossbeam-epoch.workspace = true
dlopen2 = { workspace = true, features = ["derive"] }
