[package]
name = "example-silent-db-macros"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent-db = { path = "../../silent-db", features = ["mysql"] }
silent-db-macros = { path = "../../silent-db-macros" }
