[package]
name = "example-silent-db-macros"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent-db = { path = "../../silent-db", features = ["mysql"] }
serde = { version = "1.0.202", features = ["derive"] }
