[package]
name = "example_silent_db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
silent-db = { path = "../../silent_db", features = ["mysql"] }
sqlx = { version = "0.7.3", features = ["runtime-tokio", "macros", "mysql"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0.79"
async-trait = "0.1.77"

