[package]
name = "example_silent_db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }
silent-db = { path = "../../silent-db", features = ["mysql"] }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1.0.81"
async-trait = "0.1.78"

