[package]
name = "example_silent_db"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.202", features = ["derive"] }
silent-db = { path = "../../silent-db", features = ["mysql"] }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0.83"
async-trait = "0.1.80"

