[package]
name = "example-sse-chat"
version = "0.1.0"
edition.workspace = true
publish = false


[dependencies]
futures-util.workspace = true
silent = { path = "../../silent", features = ["sse"] }
once_cell.workspace = true
parking_lot.workspace = true
tokio = { workspace = true, features = ["macros"] }
tokio-stream = { workspace = true, features = ["net"] }
serde.workspace = true
